--- a/home.html
+++ b/home.html
@@ -1,15 +1,13 @@
 <!doctype html>
 <html class="no-js" lang="zxx">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Quarter - Real Estate HTML Template</title>
-    <meta name="robots" content="noindex, follow" />
-    <meta name="description" content="" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="x-ua-compatible" content="ie=edge" />
+  <title>Quarter - Real Estate HTML Template</title>
+  <meta name="robots" content="noindex, follow" />
+  <meta name="description" content="" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     <!-- Place favicon.png in the root directory -->
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
@@ -34,71 +32,58 @@
 
     <!-- Add your site or application content here -->
 
-    <!-- Body main wrapper start -->
-    <div class="body-wrapper">
-      <!-- HEADER AREA START (header-5) -->
-      <header
-        class="ltn__header-area ltn__header-5 ltn__header-logo-and-mobile-menu-in-mobile ltn__header-logo-and-mobile-menu ltn__header-transparent--- gradient-color-4---"
-      >
-        <!-- ltn__header-middle-area start -->
-        <div
-          class="ltn__header-middle-area ltn__header-sticky ltn__sticky-bg-white"
-        >
-          <div class="container">
-            <div class="row">
-              <div class="col">
-                <div class="site-logo-wrap">
-                  <div class="site-logo">
-                    <a href="home.html"
-                      ><img src="img/logo.png" alt="Logo"
-                    /></a>
+  <!-- Body main wrapper start -->
+  <div class="body-wrapper">
+    <!-- HEADER AREA START (header-5) -->
+    <header
+      class="ltn__header-area ltn__header-5 ltn__header-logo-and-mobile-menu-in-mobile ltn__header-logo-and-mobile-menu ltn__header-transparent--- gradient-color-4---">
+      <!-- ltn__header-middle-area start -->
+      <div class="ltn__header-middle-area ltn__header-sticky ltn__sticky-bg-white">
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <div class="site-logo-wrap">
+                <div class="site-logo">
+                  <a href="home.html"><img src="img/logo.png" alt="Logo" /></a>
+                </div>
+              </div>
+            </div>
+            <div class="col header-menu-column">
+              <div class="header-menu d-none d-xl-block">
+                <nav>
+                  <div class="ltn__main-menu">
+                    <ul>
+                      <li><a href="home.html">Home</a></li>
+                      <li><a href="home.html">Immobili</a></li>
+                      <li><a href="about.html">Vision e Mission</a></li>
+                      <li class="special-link">
+                        <a href="contact.html">Conttataci</a>
+                      </li>
+                    </ul>
                   </div>
-                </div>
+                </nav>
               </div>
-              <div class="col header-menu-column">
-                <div class="header-menu d-none d-xl-block">
-                  <nav>
-                    <div class="ltn__main-menu">
-                      <ul>
-                        <li><a href="home.html">Home</a></li>
-                        <li><a href="home.html">Immobili</a></li>
-                        <li><a href="about.html">Vision e Mission</a></li>
-                        <li class="special-link">
-                          <a href="contact.html">Conttataci</a>
-                        </li>
-                      </ul>
-                    </div>
-                  </nav>
-                </div>
-              </div>
-              <div class="col--- ltn__header-options ltn__header-options-2">
-                <!-- Mobile Menu Button -->
-                <div class="mobile-menu-toggle d-xl-none">
-                  <a
-                    href="#ltn__utilize-mobile-menu"
-                    class="ltn__utilize-toggle"
-                  >
-                    <svg viewBox="0 0 800 600">
-                      <path
-                        d="M300,220 C300,220 520,220 540,220 C740,220 640,540 520,420 C440,340 300,200 300,200"
-                        id="top"
-                      ></path>
-                      <path d="M300,320 L540,320" id="middle"></path>
-                      <path
-                        d="M300,210 C300,210 520,210 540,210 C740,210 640,530 520,410 C440,330 300,190 300,190"
-                        id="bottom"
-                        transform="translate(480, 320) scale(1, -1) translate(-480, -318) "
-                      ></path>
-                    </svg>
-                  </a>
-                </div>
+            </div>
+            <div class="col--- ltn__header-options ltn__header-options-2">
+              <!-- Mobile Menu Button -->
+              <div class="mobile-menu-toggle d-xl-none">
+                <a href="#ltn__utilize-mobile-menu" class="ltn__utilize-toggle">
+                  <svg viewBox="0 0 800 600">
+                    <path d="M300,220 C300,220 520,220 540,220 C740,220 640,540 520,420 C440,340 300,200 300,200"
+                      id="top"></path>
+                    <path d="M300,320 L540,320" id="middle"></path>
+                    <path d="M300,210 C300,210 520,210 540,210 C740,210 640,530 520,410 C440,330 300,190 300,190"
+                      id="bottom" transform="translate(480, 320) scale(1, -1) translate(-480, -318) "></path>
+                  </svg>
+                </a>
               </div>
             </div>
           </div>
         </div>
-        <!-- ltn__header-middle-area end -->
-      </header>
-      <!-- HEADER AREA END -->
+      </div>
+      <!-- ltn__header-middle-area end -->
+    </header>
+    <!-- HEADER AREA END -->
 
       <!-- Utilize Mobile Menu Start -->
       <div
