--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
-  <title>Quarter - Real Estate HTML Template</title>
+  <title>SGS Immobiliare</title>
   <meta name="robots" content="noindex, follow" />
   <meta name="description" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -44,7 +44,7 @@
             <div class="col">
               <div class="site-logo-wrap">
                 <div class="site-logo">
-                  <a href="home.html"><img src="img/logo.png" alt="Logo" /></a>
+                  <a href="home.html"><img src="img/logo.png" alt="Logo" />SGS Immobiliare</a>
                 </div>
               </div>
             </div>
