feat: sve sam uradio ja

--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
   <!-- Place favicon.png in the root directory -->
-  <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
+  <link rel="shortcut icon" href="img/logo-2.png" type="image/x-icon" />
   <!-- Font Icons css -->
   <link rel="stylesheet" href="css/font-icons.css" />
   <!-- plugins css -->
@@ -90,7 +90,7 @@
       <div class="ltn__utilize-menu-inner ltn__scrollbar">
         <div class="ltn__utilize-menu-head">
           <div class="site-logo">
-            <a href="index.html"><img src="img/logo.png" alt="Logo" /></a>
+            <a href="home.html"><img src="img/logo.png" alt="Logo" /></a>
           </div>
           <button class="ltn__utilize-close">×</button>
         </div>
@@ -158,19 +158,21 @@
                             <i class="fa fa-play"></i>
                           </a>
                         </div>
-                        <h6 class="slide-sub-title white-color--- animated">
-                          <span><i class="fas fa-home"></i></span> Agenzia Immobiliare
+                        <h6 class="slide-sub-title white-color--- animated text-uppercase">
+                          <span><i class="fas fa-home"></i></span>SGS immobiliare di simone 
                         </h6>
                         <h1 class="slide-title animated">
-                          Cerca e Trova <br /><span>Case di Lusso</span>
+                          Realizziamo <br/><span>il tuo progetto</span>
+                          <br/>
+                          di felicità
                         </h1>
                         <div class="slide-brief animated">
                           <p>
-                            Scopri le migliori proprietà esclusive sul mercato.
+                           Ricostruzione senza pensieri.
                           </p>
                         </div>
                         <div class="btn-wrapper animated">
-                          <a href="about.html" class="theme-btn-1 btn btn-effect-1">Richiedi Informazioni</a>
+                          <a href="contact.html" class="theme-btn-1 btn btn-effect-1">Richiedi Informazioni</a>
                           <a class="ltn__video-play-btn bg-white"
                             href="https://www.youtube.com/embed/HnbMYzdjuBs?autoplay=1&amp;showinfo=0"
                             data-rel="lightcase">
@@ -217,7 +219,7 @@
                           </p>
                         </div>
                         <div class="btn-wrapper animated">
-                          <a href="service.html" class="theme-btn-1 btn btn-effect-1">I NOSTRI SERVIZI</a>
+                          <a href="about.html" class="theme-btn-1 btn btn-effect-1">I NOSTRI SERVIZI</a>
                           <a href="about.html" class="btn btn-transparent btn-effect-3">SCOPRI DI PIÙ</a>
                         </div>
                       </div>
@@ -256,7 +258,7 @@
                           </p>
                         </div>
                         <div class="btn-wrapper animated">
-                          <a href="about.html" class="theme-btn-1 btn btn-effect-1">Richiedi Informazioni</a>
+                          <a href="contact.html" class="theme-btn-1 btn btn-effect-1">Richiedi Informazioni</a>
                           <a class="ltn__video-play-btn bg-white"
                             href="https://www.youtube.com/embed/HnbMYzdjuBs?autoplay=1&amp;showinfo=0"
                             data-rel="lightcase">
@@ -302,7 +304,7 @@
                           </p>
                         </div>
                         <div class="btn-wrapper animated">
-                          <a href="service.html" class="theme-btn-1 btn btn-effect-1">I NOSTRI SERVIZI</a>
+                          <a href="about.html" class="theme-btn-1 btn btn-effect-1">I NOSTRI SERVIZI</a>
                           <a href="about.html" class="btn btn-transparent btn-effect-3">SCOPRI DI PIÙ</a>
                         </div>
                       </div>
@@ -401,7 +403,7 @@
                 </div>
                 <div class="ltn__feature-info">
                   <h4>
-                    <a href="service-details.html">Affidabilità</a>
+                    <a href="about.html">Affidabilità</a>
                   </h4>
                   <p>
                     La nostra agenzia rappresenta una scelta sicura per la tua intermediazione immobiliare, siamo in
@@ -416,7 +418,7 @@
                 </div>
                 <div class="ltn__feature-info">
                   <h4>
-                    <a href="service-details.html"> Rapidità</a>
+                    <a href="about.html"> Rapidità</a>
                   </h4>
                   <p>
                     Per noi il tuo immobile è una priorità, seguiremo personalmente la tua pratica e avremo una linea
@@ -431,7 +433,7 @@
                 </div>
                 <div class="ltn__feature-info">
                   <h4>
-                    <a href="service-details.html">Equità</a>
+                    <a href="about.html">Equità</a>
                   </h4>
                   <p>
                     Ci rendiamo conto di lavorare in un mercato dove la singola operazione spesso rappresenta anni di
@@ -469,7 +471,7 @@
                 <img src="img/icons/icon-img/21.png" alt="#" />
               </div>
               <div class="ltn__feature-info">
-                <h3><a href="service-details.html">Affitta casa tua con noi</a></h3>
+                <h3><a href="contact.html">Affitta casa tua con noi</a></h3>
                 <p>
                   Il mercato degli affitti presenta una domanda altissima al fronte di una disponibilità di immobili
                   scarsa. Il motivo per il quale molti proprietari non vogliono più affittare le loro proprietà risiede
@@ -479,7 +481,7 @@
                   da inserire nella tua proprietà, grazie anche ad uno scrupoloso esame delle credenziali dei potenziali
                   candidati.
                 </p>
-                <a class="ltn__service-btn" href="service-details.html">Trova Casa <i
+                <a class="ltn__service-btn" href="contact.html">Trova Casa <i
                     class="flaticon-right-arrow"></i></a>
               </div>
             </div>
@@ -491,7 +493,7 @@
                 <img src="img/icons/icon-img/22.png" alt="#" />
               </div>
               <div class="ltn__feature-info">
-                <h3><a href="service-details.html">Vendiamo il tuo immobile in tempi rapidi e al miglior prezzo</a></h3>
+                <h3><a href="contact.html">Vendiamo il tuo immobile in tempi rapidi e al miglior prezzo</a></h3>
                 <p>
                   SGS Immobiliare lavora con un metodo semplice ed efficace che permette risultati remunerativi e
                   prevedibili. La nostra stima scientifica parte da un confronto tra i vari prezzi di compravendita di
@@ -500,7 +502,7 @@
                   per le visite sono sempre abbondanti e le proposte vengono effettuate con importi appaganti e spesso
                   vengono immediatamente accettate dai proprietari.
                 </p>
-                <a class="ltn__service-btn" href="service-details.html">Trova acquirente <i
+                <a class="ltn__service-btn" href="contact.html">Trova acquirente <i
                     class="flaticon-right-arrow"></i></a>
               </div>
 
@@ -514,7 +516,7 @@
               </div>
 
               <div class="ltn__feature-info">
-                <h3><a href="service-details.html">Trova la casa dei tuoi sogni con noi</a></h3>
+                <h3><a href="contact.html">Trova la casa dei tuoi sogni con noi</a></h3>
                 <p>
                   SGS Immobiliare ti aiuta a trovare la casa perfetta in modo semplice ed efficace, offrendoti
                   un'esperienza chiara e trasparente. Grazie alla nostra profonda conoscenza del mercato e a una vasta
@@ -523,7 +525,7 @@
                   massima qualità e un acquisto sicuro. Ti accompagniamo in ogni fase, dalla ricerca alla conclusione
                   dell'acquisto, offrendoti un servizio completo e professionale.
                 </p>
-                <a class="ltn__service-btn" href="service-details.html">Trova casa<i
+                <a class="ltn__service-btn" href="contact.html">Trova casa<i
                     class="flaticon-right-arrow"></i></a>
               </div>
             </div>
@@ -891,121 +893,6 @@
     </div>
     <!-- CALL TO ACTION END -->
 
-    <!-- FOOTER AREA START -->
-    <footer class="ltn__footer-area">
-      <div class="footer-top-area section-bg-2 plr--4">
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-xl-3 col-md-6 col-sm-6 col-12">
-              <div class="footer-widget footer-about-widget">
-                <div class="footer-logo">
-                  <div class="site-logo">
-                    <img src="img/logo-2.png" alt="Logo" />
-                  </div>
-                </div>
-                <p>
-                  Lorem Ipsum is simply dummy text of the and typesetting
-                  industry. Lorem Ipsum is dummy text of the printing.
-                </p>
-                <div class="footer-address">
-                  <ul>
-                    <li>
-                      <div class="footer-address-icon">
-                        <i class="icon-placeholder"></i>
-                      </div>
-                      <div class="footer-address-info">
-                        <p>Brooklyn, New York, United States</p>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="footer-address-icon">
-                        <i class="icon-call"></i>
-                      </div>
-                      <div class="footer-address-info">
-                        <p><a href="tel:+0123-456789">+0123-456789</a></p>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="footer-address-icon">
-                        <i class="icon-mail"></i>
-                      </div>
-                      <div class="footer-address-info">
-                        <p>
-                          <a href="mailto:example@example.com">example@example.com</a>
-                        </p>
-                      </div>
-                    </li>
-                  </ul>
-                </div>
-                <div class="ltn__social-media mt-20">
-                  <ul>
-                    <li>
-                      <a href="#" title="Facebook"><i class="fab fa-facebook-f"></i></a>
-                    </li>
-                    <li>
-                      <a href="#" title="Twitter"><i class="fab fa-twitter"></i></a>
-                    </li>
-                    <li>
-                      <a href="#" title="Linkedin"><i class="fab fa-linkedin"></i></a>
-                    </li>
-                    <li>
-                      <a href="#" title="Youtube"><i class="fab fa-youtube"></i></a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <div class="col-xl-2 col-md-6 col-sm-6 col-12">
-              <div class="footer-widget footer-menu-widget clearfix">
-                <h4 class="footer-title">Company</h4>
-                <div class="footer-menu">
-                  <ul>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="blog.html">Blog</a></li>
-                    <li><a href="shop.html">All Products</a></li>
-                    <li><a href="locations.html">Locations Map</a></li>
-                    <li><a href="faq.html">FAQ</a></li>
-                    <li><a href="contact.html">Contact us</a></li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <div class="col-xl-2 col-md-6 col-sm-6 col-12">
-              <div class="footer-widget footer-menu-widget clearfix">
-                <h4 class="footer-title">Services</h4>
-                <div class="footer-menu">
-                  <ul>
-                    <li><a href="order-tracking.html">Order tracking</a></li>
-                    <li><a href="wishlist.html">Wish List</a></li>
-                    <li><a href="login.html">Login</a></li>
-                    <li><a href="account.html">My account</a></li>
-                    <li><a href="about.html">Terms & Conditions</a></li>
-                    <li><a href="about.html">Promotional Offers</a></li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <div class="col-xl-2 col-md-6 col-sm-6 col-12">
-              <div class="footer-widget footer-menu-widget clearfix">
-                <h4 class="footer-title">Customer Care</h4>
-                <div class="footer-menu">
-                  <ul>
-                    <li><a href="login.html">Login</a></li>
-                    <li><a href="account.html">My account</a></li>
-                    <li><a href="wishlist.html">Wish List</a></li>
-                    <li><a href="order-tracking.html">Order tracking</a></li>
-                    <li><a href="faq.html">FAQ</a></li>
-                    <li><a href="contact.html">Contact us</a></li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-
-          </div>
-        </div>
-      </div>
-    </footer>
-    <!-- FOOTER AREA END -->
   </div>
   <!-- Body main wrapper end -->
 
