--- a/contact.html
+++ b/contact.html
@@ -1,30 +1,28 @@
 <!doctype html>
 <html class="no-js" lang="zxx">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>SGS Immobiliare</title>
-    <meta name="robots" content="noindex, follow" />
-    <meta name="description" content="" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
 
-    <!-- Place favicon.png in the root directory -->
-    <link rel="shortcut icon" href="img/logo-2.png" type="image/x-icon" />
-    <!-- Font Icons css -->
-    <link rel="stylesheet" href="css/font-icons.css" />
-    <!-- plugins css -->
-    <link rel="stylesheet" href="css/plugins.css" />
-    <!-- Main Stylesheet -->
-    <link rel="stylesheet" href="css/style.css" />
-    <!-- Responsive css -->
-    <link rel="stylesheet" href="css/responsive.css" />
-  </head>
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="x-ua-compatible" content="ie=edge" />
+  <title>SGS Immobiliare</title>
+  <meta name="robots" content="noindex, follow" />
+  <meta name="description" content="" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-  <body>
-    <!--[if lte IE 9]>
+  <!-- Place favicon.png in the root directory -->
+  <link rel="shortcut icon" href="img/logo-2.png" type="image/x-icon" />
+  <!-- Font Icons css -->
+  <link rel="stylesheet" href="css/font-icons.css" />
+  <!-- plugins css -->
+  <link rel="stylesheet" href="css/plugins.css" />
+  <!-- Main Stylesheet -->
+  <link rel="stylesheet" href="css/style.css" />
+  <!-- Responsive css -->
+  <link rel="stylesheet" href="css/responsive.css" />
+</head>
+
+<body>
+  <!--[if lte IE 9]>
       <p class="browserupgrade">
         You are using an <strong>outdated</strong> browser. Please
         <a href="https://browsehappy.com/">upgrade your browser</a> to improve
@@ -32,10 +30,10 @@
       </p>
     <![endif]-->
 
-    <!-- Add your site or application content here -->
+  <!-- Add your site or application content here -->
 
-    <!-- Body main wrapper start -->
-    <div class="body-wrapper">
+  <!-- Body main wrapper start -->
+  <div class="body-wrapper">
     <!-- HEADER AREA START (header-5) -->
     <header
       class="ltn__header-area ltn__header-5 ltn__header-logo-and-mobile-menu-in-mobile ltn__header-logo-and-mobile-menu ltn__header-transparent--- gradient-color-4---">
@@ -46,7 +44,7 @@
             <div class="col">
               <div class="site-logo-wrap">
                 <div class="site-logo">
-                  <a href="home.html"><img src="img/logo.png" alt="Logo" />SGS Immobiliare</a>
+                  <a href="index.html"><img src="img/logo.png" alt="Logo" />SGS Immobiliare</a>
                 </div>
               </div>
             </div>
@@ -55,11 +53,11 @@
                 <nav>
                   <div class="ltn__main-menu">
                     <ul>
-                      <li><a href="home.html">Home</a></li>
-                      <li><a href="home.html">Immobili</a></li>
+                      <li><a href="index.html">Home</a></li>
                       <li><a href="about.html">Vision e Mission</a></li>
+                      <li><a href="contact.html">Conttataci</a></li>
                       <li class="special-link">
-                        <a href="contact.html">Conttataci</a>
+                        <a href="https://www.immobiliare.it/agenzie-immobiliari/378222/sgs-trieste/">Immobili</a>
                       </li>
                     </ul>
                   </div>
@@ -86,30 +84,31 @@
       <!-- ltn__header-middle-area end -->
     </header>
     <!-- HEADER AREA END -->
+
     <!-- Utilize Mobile Menu Start -->
     <div id="ltn__utilize-mobile-menu" class="ltn__utilize ltn__utilize-mobile-menu">
       <div class="ltn__utilize-menu-inner ltn__scrollbar">
         <div class="ltn__utilize-menu-head">
           <div class="site-logo">
-            <a href="home.html"><img src="img/logo.png" alt="Logo" /></a>
+            <a href="index.html"><img src="img/logo.png" alt="Logo" /></a>
           </div>
           <button class="ltn__utilize-close">×</button>
         </div>
         <div class="ltn__utilize-menu">
           <ul>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="home.html">Immobili</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">Vision e Mission</a></li>
+            <li><a href="contact.html">Conttataci</a></li>
           </ul>
         </div>
         <div class="ltn__utilize-buttons ltn__utilize-buttons-2">
           <ul>
             <li>
-              <a href="contact.html" title="Conttataci">
+              <a href="https://www.immobiliare.it/agenzie-immobiliari/378222/sgs-trieste/" title="Immobili">
                 <span class="utilize-btn-icon">
-                  <i class="fa-solid fa-pen-to-square"></i>
+                  <i class="fa-solid fa-house-user"></i>
                 </span>
-                Conttataci
+                IMMOBILI
               </a>
             </li>
           </ul>
@@ -138,149 +137,118 @@
     </div>
     <!-- Utilize Mobile Menu End -->
 
-      <div class="ltn__utilize-overlay"></div>
+    <div class="ltn__utilize-overlay"></div>
 
-      <!-- CONTACT ADDRESS AREA START -->
-      <div class="ltn__contact-address-area mb-90">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-4">
-              <div
-                class="ltn__contact-address-item ltn__contact-address-item-3 box-shadow"
-              >
-                <div class="ltn__contact-address-icon">
-                  <img src="img/icons/10.png" alt="Icon Image" />
-                </div>
-                <h3>Indirizzo Email</h3>
-                <p>
-                  immobiliaresgs@gmail.com <br />
-                </p>
+    <!-- CONTACT ADDRESS AREA START -->
+    <div class="ltn__contact-address-area mb-90">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="ltn__contact-address-item ltn__contact-address-item-3 box-shadow">
+              <div class="ltn__contact-address-icon">
+                <img src="img/icons/10.png" alt="Icon Image" />
               </div>
+              <h3>Indirizzo Email</h3>
+              <p>
+                immobiliaresgs@gmail.com <br />
+              </p>
             </div>
-            <div class="col-lg-4">
-              <div
-                class="ltn__contact-address-item ltn__contact-address-item-3 box-shadow"
-              >
-                <div class="ltn__contact-address-icon">
-                  <img src="img/icons/11.png" alt="Icon Image" />
-                </div>
-                <h3>Telefono</h3>
-                <p>
-                  +39 392 494 9355 <br />
-                  +00000000000
-                </p>
+          </div>
+          <div class="col-lg-4">
+            <div class="ltn__contact-address-item ltn__contact-address-item-3 box-shadow">
+              <div class="ltn__contact-address-icon">
+                <img src="img/icons/11.png" alt="Icon Image" />
               </div>
+              <h3>Telefono</h3>
+              <p>
+                +39 392 494 9355 <br />
+                +00000000000
+              </p>
             </div>
-            <div class="col-lg-4">
-              <div
-                class="ltn__contact-address-item ltn__contact-address-item-3 box-shadow"
-              >
-                <div class="ltn__contact-address-icon">
-                  <img src="img/icons/12.png" alt="Icon Image" />
-                </div>
-                <h3>Uficcio</h3>
-                <p>
-                  Via Paolo Reti 1, 34122  <br />
-                  Trieste, Italia
-                </p>
+          </div>
+          <div class="col-lg-4">
+            <div class="ltn__contact-address-item ltn__contact-address-item-3 box-shadow">
+              <div class="ltn__contact-address-icon">
+                <img src="img/icons/12.png" alt="Icon Image" />
               </div>
+              <h3>Uficcio</h3>
+              <p>
+                Via Paolo Reti 1, 34122 <br />
+                Trieste, Italia
+              </p>
             </div>
           </div>
         </div>
       </div>
-      <!-- CONTACT ADDRESS AREA END -->
+    </div>
+    <!-- CONTACT ADDRESS AREA END -->
 
-      <!-- CONTACT MESSAGE AREA START -->
-      <div class="ltn__contact-message-area mb-120 mb--100">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-12">
-              <div class="ltn__form-box contact-form-box box-shadow white-bg">
-                <h4 class="title-2">Richiedi un preventivo</h4>
-                <form id="contact-form" action="mail.php" method="post">
-                  <div class="row">
-                    <div class="col-md-6">
-                      <div class="input-item input-item-name ltn__custom-icon">
-                        <input
-                          type="text"
-                          name="name"
-                          placeholder="Inserire il nome"
-                        />
-                      </div>
-                    </div>
-                    <div class="col-md-6">
-                      <div class="input-item input-item-email ltn__custom-icon">
-                        <input
-                          type="email"
-                          name="email"
-                          placeholder="Inserire l'indirizzo email"
-                        />
-                      </div>
-                    </div>
-                    <div class="col-md-6">
-                      <div class="input-item">
-                        <select class="nice-select">
-                          <option>Seleziona il tipo di servizio</option>
-                          <option>Gestione immobiliare</option>
-                          <option>Servizio ipotecario</option>
-                          <option>Servizio di consulenza</option>
-                          <option>Acquisto casa</option>
-                          <option>Vendita di case</option>
-                          <option>Servizi di garanzia</option>
-                        </select>
-                      </div>
-                    </div>
-                    <div class="col-md-6">
-                      <div class="input-item input-item-phone ltn__custom-icon">
-                        <input
-                          type="text"
-                          name="phone"
-                          placeholder="Inserire il numero di telefono"
-                        />
-                      </div>
+    <!-- CONTACT MESSAGE AREA START -->
+    <div class="ltn__contact-message-area mb-120 mb--100">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="ltn__form-box contact-form-box box-shadow white-bg">
+              <h4 class="title-2">Richiedi una Consulenza</h4>
+              <form id="contact-form" action="mail.php" method="post">
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="input-item input-item-name ltn__custom-icon">
+                      <input type="text" name="name" placeholder="Inserire il nome" />
                     </div>
                   </div>
-                  <div class="input-item input-item-textarea ltn__custom-icon">
-                    <textarea
-                      name="message"
-                      placeholder="Descrizione della richiesta"
-                    ></textarea>
+                  <div class="col-md-6">
+                    <div class="input-item input-item-email ltn__custom-icon">
+                      <input type="email" name="email" placeholder="Inserire l'indirizzo email" />
+                    </div>
                   </div>
-                  <p>
-                    <label class="input-info-save mb-0"
-                      ><input type="checkbox" name="agree" /> TODO DA VEDERE LO SCOPO.</label
-                    >
-                  </p>
-                  <div class="btn-wrapper mt-0">
-                    <button
-                      class="btn theme-btn-1 btn-effect-1 text-uppercase"
-                      type="submit"
-                    >
-                      Invia
-                    </button>
+                  <div class="col-md-6">
+                    <div class="input-item">
+                      <select class="nice-select">
+                        <option>Seleziona il tipo di servizio</option>
+                        <option>Gestione immobiliare</option>
+                        <option>Servizio ipotecario</option>
+                        <option>Servizio di consulenza</option>
+                        <option>Acquisto casa</option>
+                        <option>Vendita di case</option>
+                        <option>Servizi di garanzia</option>
+                      </select>
+                    </div>
                   </div>
-                  <p class="form-messege mb-0 mt-20"></p>
-                </form>
-              </div>
+                  <div class="col-md-6">
+                    <div class="input-item input-item-phone ltn__custom-icon">
+                      <input type="text" name="phone" placeholder="Inserire il numero di telefono" />
+                    </div>
+                  </div>
+                </div>
+                <div class="input-item input-item-textarea ltn__custom-icon">
+                  <textarea name="message" placeholder="Descrizione della richiesta"></textarea>
+                </div>
+                <p>
+                  <label class="input-info-save mb-0"><input type="checkbox" name="agree" /> TODO DA VEDERE LO
+                    SCOPO.</label>
+                </p>
+                <div class="btn-wrapper mt-0">
+                  <button class="btn theme-btn-1 btn-effect-1 text-uppercase" type="submit">
+                    Invia
+                  </button>
+                </div>
+                <p class="form-messege mb-0 mt-20"></p>
+              </form>
             </div>
           </div>
         </div>
       </div>
-      <!-- CONTACT MESSAGE AREA END -->
+    </div>
+    <!-- CONTACT MESSAGE AREA END -->
 
-      <!-- GOOGLE MAP AREA START -->
-      <div class="google-map mb-120 mt-100">
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2709.0733111909535!2d13.776645999999998!3d45.6515135!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477b6b3d9d121d11%3A0xa082e889953e65a8!2sSGS%20Immobiliare!5e1!3m2!1sen!2sit!4v1739117161081!5m2!1sen!2sit"
-          width="100%"
-          height="100%"
-          frameborder="0"
-          allowfullscreen=""
-          aria-hidden="false"
-          tabindex="0"
-        ></iframe>
-      </div>
-      <!-- GOOGLE MAP AREA END -->
+    <!-- GOOGLE MAP AREA START -->
+    <div class="google-map mb-120 mt-100">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2709.0733111909535!2d13.776645999999998!3d45.6515135!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477b6b3d9d121d11%3A0xa082e889953e65a8!2sSGS%20Immobiliare!5e1!3m2!1sen!2sit!4v1739117161081!5m2!1sen!2sit"
+        width="100%" height="100%" frameborder="0" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+    </div>
+    <!-- GOOGLE MAP AREA END -->
 
     <!-- CALL TO ACTION START (call-to-action-6) -->
     <div class="ltn__call-to-action-area call-to-action-6 before-bg-bottom" data-bs-bg="img/1.jpg--">
@@ -293,7 +261,8 @@
                 <p>Ti aiutiamo a trasformare il sogno di una nuova casa in realtà.</p>
               </div>
               <div class="btn-wrapper">
-                <a class="btn btn-effect-3 btn-white" href="contact.html">Esplora Proprietà <i
+                <a class="btn btn-effect-3 btn-white"
+                  href="https://www.immobiliare.it/agenzie-immobiliari/378222/sgs-trieste/">Esplora Proprietà <i
                     class="icon-next"></i></a>
               </div>
             </div>
@@ -303,8 +272,8 @@
     </div>
     <!-- CALL TO ACTION END -->
 
-      <!-- FOOTER AREA START -->
-      <!-- <footer class="ltn__footer-area">
+    <!-- FOOTER AREA START -->
+    <!-- <footer class="ltn__footer-area">
         <div class="footer-top-area section-bg-2 plr--5">
           <div class="container-fluid">
             <div class="row">
@@ -470,15 +439,16 @@
           </div>
         </div>
       </footer> -->
-      <!-- FOOTER AREA END -->
-    </div>
-    <!-- Body main wrapper end -->
+    <!-- FOOTER AREA END -->
+  </div>
+  <!-- Body main wrapper end -->
 
-    <!-- All JS Plugins -->
-    <script src="js/plugins.js"></script>
-    <!-- Contact Form -->
-    <script src="js/contact.js"></script>
-    <!-- Main JS -->
-    <script src="js/main.js"></script>
-  </body>
+  <!-- All JS Plugins -->
+  <script src="js/plugins.js"></script>
+  <!-- Contact Form -->
+  <script src="js/contact.js"></script>
+  <!-- Main JS -->
+  <script src="js/main.js"></script>
+</body>
+
 </html>
