feat: minor changes

--- a/about.html
+++ b/about.html
@@ -303,13 +303,13 @@
               <div class="team-info">
                 <h4>Simone</h4>
                 <h6 class="ltn__secondary-color">Fondatore</h6>
-                <div class="ltn__social-media">
+                <!-- <div class="ltn__social-media">
                   <ul>
                     <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                     <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                     <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
                   </ul>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
@@ -321,13 +321,6 @@
               <div class="team-info">
                 <h4>Elia</h4>
                 <h6 class="ltn__secondary-color">Agente</h6>
-                <div class="ltn__social-media">
-                  <ul>
-                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-                  </ul>
-                </div>
               </div>
             </div>
           </div>
@@ -339,13 +332,6 @@
               <div class="team-info">
                 <h4>Jovan</h4>
                 <h6 class="ltn__secondary-color">Agebte</h6>
-                <div class="ltn__social-media">
-                  <ul>
-                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-                  </ul>
-                </div>
               </div>
             </div>
           </div>
