--- a/index.html
+++ b/index.html
@@ -845,6 +845,92 @@
     </div>
     <!-- CALL TO ACTION END -->
 
+    <!-- FOOTER AREA START -->
+    <footer class="ltn__footer-area  ">
+      <div class="footer-top-area  section-bg-2 plr--5">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-xl-3 col-md-6 col-sm-6 col-12">
+              <div class="footer-widget footer-about-widget">
+                <div class="footer-logo">
+                  <div class="site-logo">
+                    <img src="img/logo-2.png" alt="Logo">
+                  </div>
+                  <p>Lorem Ipsum is simply dummy text of the and typesetting industry. Lorem Ipsum is dummy text of the
+                    printing.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-xl-3 col-md-6 col-sm-6 col-12">
+              <div class="footer-widget footer-about-widget">
+                <div class="footer-address">
+                  <ul>
+                    <li>
+                      <div class="footer-address-icon">
+                        <i class="icon-placeholder"></i>
+                      </div>
+                      <div class="footer-address-info">
+                        <p><a href="https://maps.app.goo.gl/9Uynzs6qp7WA9ksE6">Via Paolo Reti 1, 34122, Trieste</a></p>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="footer-address-icon">
+                        <i class="icon-call"></i>
+                      </div>
+                      <div class="footer-address-info">
+                        <p><a href="tel:+393924949355">+39 392 494 9355</a></p>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="footer-address-icon">
+                        <i class="icon-mail"></i>
+                      </div>
+                      <div class="footer-address-info">
+                        <p><a href="mailto:immobiliaresgs@gmail.com">immobiliaresgs@gmail.com</a></p>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+                <div class="ltn__social-media mt-20">
+                  <ul>
+                    <li>
+                      <a href="https://www.facebook.com/sgsimmobiliare/" title="Facebook"><i
+                          class="fab fa-facebook-f"></i></a>
+                    </li>
+                    <li>
+                      <a href="https://www.instagram.com/sgsimmobiliare/" title="Instagram"><i
+                          class="fab fa-instagram"></i></a>
+                    </li>
+                    <li>
+                      <a href="https://www.immobiliare.it/agenzie-immobiliari/378222/sgs-trieste/"
+                        title="Immobiliare"><i class="fa-solid fa-house-user"></i></a>
+                    </li>
+                    <li>
+                      <a href="https://www.trovacasa.it/agenzie-immobiliari/sgs-immobiliare-trieste-tc-82366"
+                        title="Trova Casa">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="ltn__copyright-area ltn__copyright-2 section-bg-7  plr--5">
+        <div class="container-fluid ltn__border-top-2">
+          <div class="row">
+            <div class="col-md-6 col-12">
+              <div class="ltn__copyright-design clearfix">
+                <p>All Rights Reserved @ SGS Immobiliare<span class="current-year"></span></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- FOOTER AREA END -->
   </div>
   <!-- Body main wrapper end -->
 
