--- a/about.html
+++ b/about.html
@@ -379,9 +379,9 @@
                 <h6
                   class="section-subtitle section-subtitle-2 ltn__secondary-color"
                 >
-                  Team
+                  Il Team
                 </h6>
-                <h1 class="section-title">Property Agents</h1>
+                <h1 class="section-title">Ci mettiamo la faccia</h1>
               </div>
             </div>
           </div>
@@ -422,7 +422,7 @@
                 </div>
                 <div class="team-info">
                   <h4>Jovan</h4>
-                  <h6 class="ltn__secondary-color">Agebte</h6>
+                  <h6 class="ltn__secondary-color">Agente</h6>
                 </div>
               </div>
             </div>
