--- a/index.html
+++ b/index.html
@@ -850,19 +850,27 @@
       <div class="footer-top-area  section-bg-2 plr--5">
         <div class="container-fluid">
           <div class="row">
-            <div class="col-xl-3 col-md-6 col-sm-6 col-12">
+            <div class="col-xl-4 col-md-4 col-sm-12 col-12">
               <div class="footer-widget footer-about-widget">
                 <div class="footer-logo">
-                  <div class="site-logo">
-                    <img src="img/logo-2.png" alt="Logo">
-                  </div>
-                  <p>Lorem Ipsum is simply dummy text of the and typesetting industry. Lorem Ipsum is dummy text of the
-                    printing.</p>
+                  <p>Affidati alla nostra esperienza per scoprire la casa che meglio rispecchia il tuo stile di vita. Grazie a un percorso guidato e personalizzato, ogni dettaglio viene curato per offrirti il massimo comfort.
+                  </p>
                 </div>
               </div>
             </div>
-            <div class="col-xl-3 col-md-6 col-sm-6 col-12">
-              <div class="footer-widget footer-about-widget">
+            <div class="col-xl-4 col-md-4 col-sm-12 col-12">
+              <div class="site-logo">
+                <img src="img/logo-2.png" alt="Logo">
+              </div>
+            </div>
+            <div class="col-xl-4 col-md-4 col-sm-12 col-12">
+              <div class="footer-widget footer-about-widget" style="
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+">
                 <div class="footer-address">
                   <ul>
                     <li>
@@ -923,7 +931,12 @@
           <div class="row">
             <div class="col-md-6 col-12">
               <div class="ltn__copyright-design clearfix">
-                <p>All Rights Reserved @ SGS Immobiliare<span class="current-year"></span></p>
+                <p>All Rights Reserved @ SGS Immobiliare <span class="current-year"></span></p>
+              </div>
+            </div>
+            <div class="col-md-6 col-12">
+              <div class="ltn__copyright-design clearfix">
+                <p>PIVA: 01727400887</p>
               </div>
             </div>
           </div>
