feat: removed unused pages

--- a/about.html
+++ b/about.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <!-- Responsive css -->
     <link rel="stylesheet" href="css/responsive.css" />
+    <script src="https://www.google.com/recaptcha/api.js"></script>
   </head>
 
   <body>
@@ -471,4 +472,3 @@
     <script src="js/main.js"></script>
   </body>
 </html>
-
