--- a/404.html
+++ b/404.html
@@ -1,198 +1,242 @@
 <!doctype html>
 <html class="no-js" lang="zxx">
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>SGS Immobiliare</title>
     <meta name="robots" content="noindex, follow" />
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
     <!-- Place favicon.png in the root directory -->
-    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="img/logo-2.png" type="image/x-icon" />
     <!-- Font Icons css -->
-    <link rel="stylesheet" href="css/font-icons.css">
+    <link rel="stylesheet" href="css/font-icons.css" />
     <!-- plugins css -->
-    <link rel="stylesheet" href="css/plugins.css">
+    <link rel="stylesheet" href="css/plugins.css" />
     <!-- Main Stylesheet -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
     <!-- Responsive css -->
-    <link rel="stylesheet" href="css/responsive.css">
-</head>
+    <link rel="stylesheet" href="css/responsive.css" />
+    <script src="https://www.google.com/recaptcha/api.js"></script>
+  </head>
 
-<body>
+  <body>
     <!--[if lte IE 9]>
-        <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
+      <p class="browserupgrade">
+        You are using an <strong>outdated</strong> browser. Please
+        <a href="https://browsehappy.com/">upgrade your browser</a> to improve
+        your experience and security.
+      </p>
     <![endif]-->
 
     <!-- Add your site or application content here -->
 
     <!-- Body main wrapper start -->
     <div class="body-wrapper">
-
-        <!-- HEADER AREA START (header-5) -->
-        <header
-            class="ltn__header-area ltn__header-5 ltn__header-logo-and-mobile-menu-in-mobile ltn__header-logo-and-mobile-menu ltn__header-transparent--- gradient-color-4---">
-            <!-- ltn__header-middle-area start -->
-            <div class="ltn__header-middle-area ltn__header-sticky ltn__sticky-bg-white">
-                <div class="container">
-                    <div class="row">
-                        <div class="col">
-                            <div class="site-logo-wrap">
-                                <div class="site-logo">
-                                    <a href="index.html"><img src="img/logo.png" alt="Logo" />SGS Immobiliare</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col header-menu-column">
-                            <div class="header-menu d-none d-xl-block">
-                                <nav>
-                                    <div class="ltn__main-menu">
-                                        <ul>
-                                            <li><a href="index.html">Home</a></li>
-                                            <li><a href="about.html">Vision e Mission</a></li>
-                                            <li><a href="contact.html">Conttataci</a></li>
-                                            <li class="special-link">
-                                                <a
-                                                    href="https://www.immobiliare.it/agenzie-immobiliari/378222/sgs-trieste/">Immobili</a>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </nav>
-                            </div>
-                        </div>
-                        <div class="col--- ltn__header-options ltn__header-options-2">
-                            <!-- Mobile Menu Button -->
-                            <div class="mobile-menu-toggle d-xl-none">
-                                <a href="#ltn__utilize-mobile-menu" class="ltn__utilize-toggle">
-                                    <svg viewBox="0 0 800 600">
-                                        <path
-                                            d="M300,220 C300,220 520,220 540,220 C740,220 640,540 520,420 C440,340 300,200 300,200"
-                                            id="top"></path>
-                                        <path d="M300,320 L540,320" id="middle"></path>
-                                        <path
-                                            d="M300,210 C300,210 520,210 540,210 C740,210 640,530 520,410 C440,330 300,190 300,190"
-                                            id="bottom"
-                                            transform="translate(480, 320) scale(1, -1) translate(-480, -318) "></path>
-                                    </svg>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
+      <!-- HEADER AREA START (header-5) -->
+      <header
+        class="ltn__header-area ltn__header-5 ltn__header-logo-and-mobile-menu-in-mobile ltn__header-logo-and-mobile-menu ltn__header-transparent--- gradient-color-4---"
+      >
+        <!-- ltn__header-middle-area start -->
+        <div
+          class="ltn__header-middle-area ltn__header-sticky ltn__sticky-bg-white"
+        >
+          <div class="container">
+            <div class="row">
+              <div class="col">
+                <div class="site-logo-wrap">
+                  <div class="site-logo">
+                    <a href="index.html"
+                      ><img src="img/logo.png" alt="Logo" />SGS Immobiliare</a
+                    >
+                  </div>
                 </div>
-            </div>
-            <!-- ltn__header-middle-area end -->
-        </header>
-        <!-- HEADER AREA END -->
-
-        <!-- Utilize Mobile Menu Start -->
-        <div id="ltn__utilize-mobile-menu" class="ltn__utilize ltn__utilize-mobile-menu">
-            <div class="ltn__utilize-menu-inner ltn__scrollbar">
-                <div class="ltn__utilize-menu-head">
-                    <div class="site-logo">
-                        <a href="index.html"><img src="img/logo.png" alt="Logo" /></a>
-                    </div>
-                    <button class="ltn__utilize-close">×</button>
-                </div>
-                <div class="ltn__utilize-menu">
-                    <ul>
+              </div>
+              <div class="col header-menu-column">
+                <div class="header-menu d-none d-xl-block">
+                  <nav>
+                    <div class="ltn__main-menu">
+                      <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">Vision e Mission</a></li>
                         <li><a href="contact.html">Conttataci</a></li>
-                    </ul>
-                </div>
-                <div class="ltn__utilize-buttons ltn__utilize-buttons-2">
-                    <ul>
-                        <li>
-                            <a href="https://www.immobiliare.it/agenzie-immobiliari/378222/sgs-trieste/"
-                                title="Immobili">
-                                <span class="utilize-btn-icon">
-                                    <i class="fa-solid fa-house-user"></i>
-                                </span>
-                                IMMOBILI
-                            </a>
+                        <li class="special-link">
+                          <a
+                            href="https://www.immobiliare.it/agenzie-immobiliari/378222/sgs-trieste/"
+                            >Immobili</a
+                          >
                         </li>
-                    </ul>
-                </div>
-                <div class="ltn__social-media-2">
-                    <ul>
-                        <li>
-                            <a href="https://www.facebook.com/sgsimmobiliare/" title="Facebook"><i
-                                    class="fab fa-facebook-f"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://www.instagram.com/sgsimmobiliare/" title="Instagram"><i
-                                    class="fab fa-instagram"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://www.immobiliare.it/agenzie-immobiliari/378222/sgs-trieste/"
-                                title="Immobiliare"><i class="fa-solid fa-house-user"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://www.trovacasa.it/agenzie-immobiliari/sgs-immobiliare-trieste-tc-82366"
-                                title="Trova Casa">
-                                <i class="fa-solid fa-magnifying-glass"></i>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <!-- Utilize Mobile Menu End -->
-
-
-        <div class="ltn__utilize-overlay"></div>
-
-        <!-- Area 404 inizio -->
-        <div class="ltn__404-area ltn__404-area-1 mb-120">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="error-404-inner text-center">
-                            <div class="error-img mb-30">
-                                <img src="img/others/error-1.png" alt="#">
-                            </div>
-                            <h1 class="error-404-title d-none">404</h1>
-                            <h2>Pagina Non Trovata!</h2>
-                            <!-- <h3>Oops! Sembra che qualcosa sia andato storto</h3> -->
-                            <p>Oops! La pagina che stai cercando non esiste. Potrebbe essere stata spostata o eliminata.
-                            </p>
-                            <div class="btn-wrapper">
-                                <a href="index.html" class="btn btn-transparent"><i
-                                        class="fas fa-long-arrow-alt-left"></i> TORNA ALLA HOME</a>
-                            </div>
-                        </div>
+                      </ul>
                     </div>
+                  </nav>
                 </div>
-            </div>
-        </div>
-        <!-- Area 404 fine -->
-
-
-        <!-- CALL TO ACTION START (call-to-action-6) -->
-        <div class="ltn__call-to-action-area call-to-action-6 before-bg-bottom" data-bs-bg="img/1.jpg--">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div
-                            class="call-to-action-inner call-to-action-inner-6 ltn__secondary-bg position-relative text-center---">
-                            <div class="coll-to-info text-color-white">
-                                <h1>Stai cercando la casa dei tuoi sogni?</h1>
-                                <p>Ti aiutiamo a trasformare il sogno di una nuova casa in realtà.</p>
-                            </div>
-                            <div class="btn-wrapper">
-                                <a class="btn btn-effect-3 btn-white"
-                                    href="https://www.immobiliare.it/agenzie-immobiliari/378222/sgs-trieste/">Esplora
-                                    Proprietà <i class="icon-next"></i></a>
-                            </div>
-                        </div>
-                    </div>
+              </div>
+              <div class="col--- ltn__header-options ltn__header-options-2">
+                <!-- Mobile Menu Button -->
+                <div class="mobile-menu-toggle d-xl-none">
+                  <a
+                    href="#ltn__utilize-mobile-menu"
+                    class="ltn__utilize-toggle"
+                  >
+                    <svg viewBox="0 0 800 600">
+                      <path
+                        d="M300,220 C300,220 520,220 540,220 C740,220 640,540 520,420 C440,340 300,200 300,200"
+                        id="top"
+                      ></path>
+                      <path d="M300,320 L540,320" id="middle"></path>
+                      <path
+                        d="M300,210 C300,210 520,210 540,210 C740,210 640,530 520,410 C440,330 300,190 300,190"
+                        id="bottom"
+                        transform="translate(480, 320) scale(1, -1) translate(-480, -318) "
+                      ></path>
+                    </svg>
+                  </a>
                 </div>
+              </div>
             </div>
+          </div>
         </div>
-        <!-- CALL TO ACTION END -->
+        <!-- ltn__header-middle-area end -->
+      </header>
+      <!-- HEADER AREA END -->
 
+      <!-- Utilize Mobile Menu Start -->
+      <div
+        id="ltn__utilize-mobile-menu"
+        class="ltn__utilize ltn__utilize-mobile-menu"
+      >
+        <div class="ltn__utilize-menu-inner ltn__scrollbar">
+          <div class="ltn__utilize-menu-head">
+            <div class="site-logo">
+              <a href="index.html"><img src="img/logo.png" alt="Logo" /></a>
+            </div>
+            <button class="ltn__utilize-close">×</button>
+          </div>
+          <div class="ltn__utilize-menu">
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">Vision e Mission</a></li>
+              <li><a href="contact.html">Conttataci</a></li>
+            </ul>
+          </div>
+          <div class="ltn__utilize-buttons ltn__utilize-buttons-2">
+            <ul>
+              <li>
+                <a
+                  href="https://www.immobiliare.it/agenzie-immobiliari/378222/sgs-trieste/"
+                  title="Immobili"
+                >
+                  <span class="utilize-btn-icon">
+                    <i class="fa-solid fa-house-user"></i>
+                  </span>
+                  IMMOBILI
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="ltn__social-media-2">
+            <ul>
+              <li>
+                <a
+                  href="https://www.facebook.com/sgsimmobiliare/"
+                  title="Facebook"
+                  ><i class="fab fa-facebook-f"></i
+                ></a>
+              </li>
+              <li>
+                <a
+                  href="https://www.instagram.com/sgsimmobiliare/"
+                  title="Instagram"
+                  ><i class="fab fa-instagram"></i
+                ></a>
+              </li>
+              <li>
+                <a
+                  href="https://www.immobiliare.it/agenzie-immobiliari/378222/sgs-trieste/"
+                  title="Immobiliare"
+                  ><i class="fa-solid fa-house-user"></i
+                ></a>
+              </li>
+              <li>
+                <a
+                  href="https://www.trovacasa.it/agenzie-immobiliari/sgs-immobiliare-trieste-tc-82366"
+                  title="Trova Casa"
+                >
+                  <i class="fa-solid fa-magnifying-glass"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <!-- Utilize Mobile Menu End -->
+
+      <div class="ltn__utilize-overlay"></div>
+
+      <!-- Area 404 inizio -->
+      <div class="ltn__404-area ltn__404-area-1 mb-120">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="error-404-inner text-center">
+                <div class="error-img mb-30">
+                  <img src="img/others/error-1.png" alt="#" />
+                </div>
+                <h1 class="error-404-title d-none">404</h1>
+                <h2>Pagina Non Trovata!</h2>
+                <!-- <h3>Oops! Sembra che qualcosa sia andato storto</h3> -->
+                <p>
+                  Oops! La pagina che stai cercando non esiste. Potrebbe essere
+                  stata spostata o eliminata.
+                </p>
+                <div class="btn-wrapper">
+                  <a href="index.html" class="btn btn-transparent"
+                    ><i class="fas fa-long-arrow-alt-left"></i> TORNA ALLA
+                    HOME</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Area 404 fine -->
+
+      <!-- CALL TO ACTION START (call-to-action-6) -->
+      <div
+        class="ltn__call-to-action-area call-to-action-6 before-bg-bottom"
+        data-bs-bg="img/1.jpg--"
+      >
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12">
+              <div
+                class="call-to-action-inner call-to-action-inner-6 ltn__secondary-bg position-relative text-center---"
+              >
+                <div class="coll-to-info text-color-white">
+                  <h1>Stai cercando la casa dei tuoi sogni?</h1>
+                  <p>
+                    Ti aiutiamo a trasformare il sogno di una nuova casa in
+                    realtà.
+                  </p>
+                </div>
+                <div class="btn-wrapper">
+                  <a
+                    class="btn btn-effect-3 btn-white"
+                    href="https://www.immobiliare.it/agenzie-immobiliari/378222/sgs-trieste/"
+                    >Esplora Proprietà <i class="icon-next"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- CALL TO ACTION END -->
     </div>
     <!-- Body main wrapper end -->
 
@@ -200,7 +244,6 @@
     <script src="js/plugins.js"></script>
     <!-- Main JS -->
     <script src="js/main.js"></script>
-
-</body>
-
+  </body>
 </html>
+
