--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <link rel="stylesheet" href="css/style.css" />
   <!-- Responsive css -->
   <link rel="stylesheet" href="css/responsive.css" />
+ <script src="https://www.google.com/recaptcha/api.js"></script>
 </head>
 
 <body>
