feat: merge stash

--- a/contact.html
+++ b/contact.html
@@ -187,9 +187,9 @@
                 <img src="img/icons/10.png" alt="Icon Image" />
               </div>
               <h3>Indirizzo Email</h3>
-              <p>
-                immobiliaresgs@gmail.com <br />
-              </p>
+              <a href="mailto:immobiliaresgs@gmail.com">
+                immobiliaresgs@gmail.com
+              </a>
             </div>
           </div>
           <div class="col-lg-4">
@@ -199,8 +199,7 @@
               </div>
               <h3>Telefono</h3>
               <p>
-                +39 392 494 9355 <br />
-                +00000000000
+                +39 392 494 9355
               </p>
             </div>
           </div>
