feat: footer adjastmests

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
   <link rel="stylesheet" href="css/style.css" />
   <!-- Responsive css -->
   <link rel="stylesheet" href="css/responsive.css" />
- <script src="https://www.google.com/recaptcha/api.js"></script>
 </head>
 
 <body>
@@ -929,15 +928,10 @@
       </div>
       <div class="ltn__copyright-area ltn__copyright-2 section-bg-7  plr--5">
         <div class="container-fluid ltn__border-top-2">
-          <div class="row">
+          <div class="row" style="display: flex;justify-content: flex-start;">
             <div class="col-md-6 col-12">
               <div class="ltn__copyright-design clearfix">
-                <p>All Rights Reserved @ SGS Immobiliare <span class="current-year"></span></p>
-              </div>
-            </div>
-            <div class="col-md-6 col-12">
-              <div class="ltn__copyright-design clearfix">
-                <p>PIVA: 01727400887</p>
+                <p>All Rights Reserved @ SGS Immobiliare <span class="current-year"></span>; PIVA: 01727400887</p>
               </div>
             </div>
           </div>
