feat: added required fields

--- a/contact.html
+++ b/contact.html
@@ -105,7 +105,6 @@
     <!-- Body main wrapper start -->
     <div class="body-wrapper">
 
-
       <!-- Utilize Mobile Menu Start -->
       <div id="ltn__utilize-mobile-menu" class="ltn__utilize ltn__utilize-mobile-menu">
         <div class="ltn__utilize-menu-inner ltn__scrollbar">
@@ -214,7 +213,7 @@
                   <div class="row">
                     <div class="col-md-6">
                       <div class="input-item input-item-name ltn__custom-icon">
-                        <input type="text" name="name" id="name" placeholder="Inserire il nome" />
+                        <input type="text" name="name" id="name" required="required" placeholder="Inserire il nome" />
                       </div>
                     </div>
                     <div class="col-md-6">
@@ -237,7 +236,7 @@
                     </div>
                     <div class="col-md-6">
                       <div class="input-item input-item-phone ltn__custom-icon">
-                        <input type="text" name="phone" id="phone" placeholder="Inserire il numero di telefono" />
+                        <input type="text" name="phone" id="phone" required="required" placeholder="Inserire il numero di telefono" />
                       </div>
                     </div>
                   </div>
