feat: Added privacy policy

--- a/about.html
+++ b/about.html
@@ -440,6 +440,14 @@
                         <p><a href="mailto:immobiliaresgs@gmail.com">immobiliaresgs@gmail.com</a></p>
                       </div>
                     </li>
+                    <li>
+                      <div class="footer-address-icon">
+                        <i class="icon-privacy"></i>
+                      </div>
+                      <div class="footer-address-info">
+                        <p><a href="privacy.html">Privacy</a></p>
+                      </div>
+                    </li>
                   </ul>
                 </div>
                 <div class="ltn__social-media mt-20">
