--- a/contact.html
+++ b/contact.html
@@ -236,13 +236,19 @@
                     </div>
                     <div class="col-md-6">
                       <div class="input-item input-item-phone ltn__custom-icon">
-                        <input type="text" name="phone" id="phone" required="required" placeholder="Inserire il numero di telefono" />
+                        <input type="text" name="phone" id="phone" required="required"
+                          placeholder="Inserire il numero di telefono" />
                       </div>
                     </div>
                   </div>
                   <div class="input-item input-item-textarea ltn__custom-icon">
                     <textarea name="message" id="message" placeholder="Descrizione della richiesta"></textarea>
                   </div>
+                  <p>
+                    <label class="input-info-save mb-0">
+                      <input type="checkbox" name="agree" required="required" /> Acconsento a essere contattato da un nostro agente immobiliare. Per maggiori dettagli, consulta la nostra informativa sulla privacy.<a href="privacy.html">Privacy</a>.
+                    </label>
+                  </p>
                   <div class="g-recaptcha" data-sitekey="6LeLid8qAAAAAKnFpkNCz2XATxsAX42kiKy8aoT9"></div>
 
                   <div class="btn-wrapper mt-0">
@@ -341,6 +347,14 @@
                         </div>
                         <div class="footer-address-info">
                           <p><a href="mailto:immobiliaresgs@gmail.com">immobiliaresgs@gmail.com</a></p>
+                        </div>
+                      </li>
+                      <li>
+                        <div class="footer-address-icon">
+                          <i class="icon-privacy"></i>
+                        </div>
+                        <div class="footer-address-info">
+                          <p><a href="privacy.html">Privacy</a></p>
                         </div>
                       </li>
                     </ul>
