--- a/index.html
+++ b/index.html
@@ -866,7 +866,8 @@
               </div>
             </div>
             <div class="col-xl-4 col-md-4 col-sm-12 col-12">
-              <div class="footer-widget footer-about-widget" style=" display: flex; align-content: center; justify-content: center; align-items: center; flex-direction: column;">
+              <div class="footer-widget footer-about-widget"
+                style=" display: flex; align-content: center; justify-content: center; align-items: center; flex-direction: column;">
                 <div class="footer-address">
                   <ul>
                     <li>
@@ -891,6 +892,14 @@
                       </div>
                       <div class="footer-address-info">
                         <p><a href="mailto:immobiliaresgs@gmail.com">immobiliaresgs@gmail.com</a></p>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="footer-address-icon">
+                        <i class="icon-privacy"></i>
+                      </div>
+                      <div class="footer-address-info">
+                        <p><a href="privacy.html">Privacy</a></p>
                       </div>
                     </li>
                   </ul>
