feat: added message on submit

--- a/contact.html
+++ b/contact.html
@@ -246,7 +246,7 @@
                   </div>
                   <p>
                     <label class="input-info-save mb-0">
-                      <input type="checkbox" name="agree" required="required" /> Acconsento a essere contattato da un nostro agente immobiliare. Per maggiori dettagli, consulta la nostra informativa sulla privacy.<a href="privacy.html">Privacy</a>.
+                      <input type="checkbox" name="agree" required="required" /> Acconsento a essere contattato da un nostro agente immobiliare. Per maggiori dettagli, consulta<a href="privacy.html"> la nostra informativa sulla nostra pagina privacy</a>.
                     </label>
                   </p>
                   <div class="g-recaptcha" data-sitekey="6LeLid8qAAAAAKnFpkNCz2XATxsAX42kiKy8aoT9"></div>
@@ -255,6 +255,8 @@
                     <button class="btn theme-btn-1 btn-effect-1 text-uppercase" type="submit" onclick="sendMail(event)">
                       Invia
                     </button>
+                    <div id="form-response-message" style="display: block; padding: 10px; margin-top: 10px; border-radius: 5px; color: #155724; background-color: #d4edda;"><p>Il tuo messaggio è stato inviato con successo!</p></div>
+
                   </div>
                   <p class="form-messege mb-0 mt-20"></p>
                 </form>
