--- a/contact.html
+++ b/contact.html
@@ -213,7 +213,7 @@
                   <div class="row">
                     <div class="col-md-6">
                       <div class="input-item input-item-name ltn__custom-icon">
-                        <input type="text" name="name" id="name" required="required" placeholder="Inserire il nome" />
+                        <input type="text" name="name" id="name" placeholder="Inserire il nome" />
                       </div>
                     </div>
                     <div class="col-md-6">
@@ -246,7 +246,7 @@
                   </div>
                   <p>
                     <label class="input-info-save mb-0">
-                      <input type="checkbox" name="agree" required="required" /> Acconsento a essere contattato da un nostro agente immobiliare. Per maggiori dettagli, consulta<a href="privacy.html"> la nostra informativa sulla nostra pagina privacy</a>.
+                      <input type="checkbox" name="agree"/> Acconsento a essere contattato da un nostro agente immobiliare. Per maggiori dettagli, consulta<a href="privacy.html"> la nostra informativa sulla nostra pagina privacy</a>.
                     </label>
                   </p>
                   <div class="g-recaptcha" data-sitekey="6LeLid8qAAAAAKnFpkNCz2XATxsAX42kiKy8aoT9"></div>
