--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,18 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
+  <meta name="robots" content="index, follow">
+  <meta name="description"
+    content="Trova la casa dei tuoi sogni con SGS Immobiliare. Offriamo consulenze immobiliari personalizzate.">
+  <meta name="keywords" content="agenzia immobiliare, compra casa, vendi casa, immobili, Trieste">
+  <meta name="author" content="SGS Immobiliare">
+  <meta property="og:title" content="SGS Immobiliare - Trova la Tua Casa Ideale">
+  <meta property="og:description" content="Scopri la casa perfetta con noi. Affidabilità e professionalità a Trieste.">
+  <meta property="og:image" content="https://yourdomain.com/img/logo.png">
+  <meta property="og:url" content="https://yourdomain.com/">
+  <meta name="twitter:card" content="summary_large_image">
+
+
   <title>SGS Immobiliare</title>
   <meta name="robots" content="noindex, follow" />
   <meta name="description" content="" />
@@ -246,7 +258,9 @@
                   </div>
                   <p>
                     <label class="input-info-save mb-0">
-                      <input type="checkbox" name="agree"/> Acconsento a essere contattato da un nostro agente immobiliare. Per maggiori dettagli, consulta<a href="privacy.html"> la nostra informativa sulla nostra pagina privacy</a>.
+                      <input type="checkbox" name="agree" /> Acconsento a essere contattato da un nostro agente
+                      immobiliare. Per maggiori dettagli, consulta<a href="privacy.html"> la nostra informativa sulla
+                        nostra pagina privacy</a>.
                     </label>
                   </p>
                   <div class="g-recaptcha" data-sitekey="6LeLid8qAAAAAKnFpkNCz2XATxsAX42kiKy8aoT9"></div>
@@ -255,7 +269,8 @@
                     <button class="btn theme-btn-1 btn-effect-1 text-uppercase" type="submit" onclick="sendMail(event)">
                       Invia
                     </button>
-                    <div id="form-response-message" style="display: none; padding: 10px; margin-top: 10px; border-radius: 5px;"></div>
+                    <div id="form-response-message"
+                      style="display: none; padding: 10px; margin-top: 10px; border-radius: 5px;"></div>
 
                   </div>
                   <p class="form-messege mb-0 mt-20"></p>
