--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
   <meta name="robots" content="noindex, follow" />
   <meta name="description" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="robots" content="index, follow">
+  <meta name="description"
+    content="Trova la casa dei tuoi sogni con SGS Immobiliare. Offriamo consulenze immobiliari personalizzate.">
+  <meta name="keywords" content="agenzia immobiliare, compra casa, vendi casa, immobili, Trieste">
+  <meta name="author" content="SGS Immobiliare">
+  <meta property="og:title" content="SGS Immobiliare - Trova la Tua Casa Ideale">
+  <meta property="og:description" content="Scopri la casa perfetta con noi. Affidabilità e professionalità a Trieste.">
+  <meta property="og:image" content="https://yourdomain.com/img/logo.png">
+  <meta property="og:url" content="https://yourdomain.com/">
+  <meta name="twitter:card" content="summary_large_image">
+
 
   <!-- Place favicon.png in the root directory -->
   <link rel="shortcut icon" href="img/logo-2.png" type="image/x-icon" />
