feat: added domain

--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,8 @@
   <meta name="author" content="SGS Immobiliare">
   <meta property="og:title" content="SGS Immobiliare - Trova la Tua Casa Ideale">
   <meta property="og:description" content="Scopri la casa perfetta con noi. Affidabilità e professionalità a Trieste.">
-  <meta property="og:image" content="https://yourdomain.com/img/logo.png">
-  <meta property="og:url" content="https://yourdomain.com/">
+  <meta property="og:image" content="https://sgsimmobiliare.com/img/logo.png">
+  <meta property="og:url" content="https://sgsimmobiliare.com/">
   <meta name="twitter:card" content="summary_large_image">
 
 
