--- a/404.html
+++ b/404.html
@@ -45,7 +45,7 @@
             <div class="col">
               <div class="site-logo-wrap">
                 <div class="site-logo">
-                  <a href="index.html"><img src="img/logo.png" alt="Logo" />SGS Immobiliare</a>
+                  <a href="index"><img src="img/logo.png" alt="Logo" />SGS Immobiliare</a>
                 </div>
               </div>
             </div>
@@ -54,9 +54,9 @@
                 <nav>
                   <div class="ltn__main-menu">
                     <ul>
-                      <li><a href="index.html">Home</a></li>
-                      <li><a href="about.html">Vision e Mission</a></li>
-                      <li><a href="contact.html">Conttataci</a></li>
+                      <li><a href="index">Home</a></li>
+                      <li><a href="about">Vision e Mission</a></li>
+                      <li><a href="contact">Conttataci</a></li>
                       <li class="special-link">
                         <a href="https://www.immobiliare.it/agenzie-immobiliari/378222/sgs-trieste/">Immobili</a>
                       </li>
@@ -91,15 +91,15 @@
       <div class="ltn__utilize-menu-inner ltn__scrollbar">
         <div class="ltn__utilize-menu-head">
           <div class="site-logo">
-            <a href="index.html"><img src="img/logo.png" alt="Logo" /></a>
+            <a href="index"><img src="img/logo.png" alt="Logo" /></a>
           </div>
           <button class="ltn__utilize-close">×</button>
         </div>
         <div class="ltn__utilize-menu">
           <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">Vision e Mission</a></li>
-            <li><a href="contact.html">Conttataci</a></li>
+            <li><a href="index">Home</a></li>
+            <li><a href="about">Vision e Mission</a></li>
+            <li><a href="contact">Conttataci</a></li>
           </ul>
         </div>
         <div class="ltn__utilize-buttons ltn__utilize-buttons-2">
@@ -157,7 +157,7 @@
                 stata spostata o eliminata.
               </p>
               <div class="btn-wrapper">
-                <a href="index.html" class="btn btn-transparent"><i class="fas fa-long-arrow-alt-left"></i> TORNA ALLA
+                <a href="index" class="btn btn-transparent"><i class="fas fa-long-arrow-alt-left"></i> TORNA ALLA
                   HOME</a>
               </div>
             </div>
@@ -246,7 +246,7 @@
                         <i class="icon-privacy"></i>
                       </div>
                       <div class="footer-address-info">
-                        <p><a href="privacy.html">Privacy</a></p>
+                        <p><a href="privacy">Privacy</a></p>
                       </div>
                     </li>
                   </ul>
