--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -42,7 +42,7 @@
                 <div class="col-lg-12">
                     <div class="ltn__doc-header-inner">
                         <div class="site-logo">
-                            <a href="index.html"><img src="img/logo.png" alt="Logo"></a>
+                            <a href="index"><img src="img/logo.png" alt="Logo"></a>
                         </div>
                         <!-- Mobile Menu Button -->
                         <div class="mobile-menu-toggle menu-btn-white--- menu-btn-border--- d-xl-none-- ">
@@ -66,7 +66,7 @@
         <div class="ltn__utilize-menu-inner ltn__scrollbar">
             <div class="ltn__utilize-menu-head">
                 <div class="site-logo">
-                    <a href="index.html"><img src="img/logo.png" alt="Logo"></a>
+                    <a href="index"><img src="img/logo.png" alt="Logo"></a>
                 </div>
                 <button class="ltn__utilize-close  d-block d-lg-none">×</button>
             </div>
@@ -394,9 +394,9 @@
                 <p>
                     Font Awesome Icon: <a href="https://fontawesome.com/icons?from=io" target="_blank" class="ltn__secondary-color">Font Awesome Icon</a> 
                     <br>
-                    Custom Icon - 1: <a href="https://tunatheme.com/tf/html/quarter-preview/quarter/fonts/new-folder/custom-Fonts-For-Use/demo.html" target="_blank" class="ltn__secondary-color">Icon Moon Icon</a>
+                    Custom Icon - 1: <a href="https://tunatheme.com/tf/html/quarter-preview/quarter/fonts/new-folder/custom-Fonts-For-Use/demo" target="_blank" class="ltn__secondary-color">Icon Moon Icon</a>
                     <br>
-                    Custom Icon - 2: <a href="https://tunatheme.com/tf/html/quarter-preview/quarter/fonts/new-folder/custom-Fonts-For-Use-2/flaticon.html" target="_blank" class="ltn__secondary-color">Flat Icon</a>
+                    Custom Icon - 2: <a href="https://tunatheme.com/tf/html/quarter-preview/quarter/fonts/new-folder/custom-Fonts-For-Use-2/flaticon" target="_blank" class="ltn__secondary-color">Flat Icon</a>
                 </p>
                 <h5>Used icon fonts here:-</h5>
                 <img src="img/settings/icon-font-used.jpg" alt="#">
@@ -682,11 +682,11 @@
                     <br>
                     Lightcase: <a href="https://cornel.bopp-art.com/lightcase/" target="_blank" class="ltn__secondary-color">Lightcase</a>
                     <br>
-                    Counter-Up: <a href="http://bfintal.github.io/Counter-Up/demo/demo.html" target="_blank" class="ltn__secondary-color">Counter-Up</a>
+                    Counter-Up: <a href="http://bfintal.github.io/Counter-Up/demo/demo" target="_blank" class="ltn__secondary-color">Counter-Up</a>
                     <br>
                     Countdown: <a href="http://hilios.github.io/jQuery.countdown/" target="_blank" class="ltn__secondary-color">Countdown</a>
                     <br>
-                    Instagram Feed: <a href="https://www.sowecms.com/demos/jquery.instagramFeed/index.html" target="_blank" class="ltn__secondary-color">Instagram Feed</a>
+                    Instagram Feed: <a href="https://www.sowecms.com/demos/jquery.instagramFeed/index" target="_blank" class="ltn__secondary-color">Instagram Feed</a>
                     <br>
                     Waypoints: <a href="https://github.com/imakewebthings/waypoints" target="_blank" class="ltn__secondary-color">Waypoints</a>
                     <br>
