--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
             <div class="col">
               <div class="site-logo-wrap">
                 <div class="site-logo">
-                  <a href="index.html"><img src="img/logo.png" alt="Logo" />SGS Immobiliare</a>
+                  <a href="index"><img src="img/logo.png" alt="Logo" />SGS Immobiliare</a>
                 </div>
               </div>
             </div>
@@ -65,9 +65,9 @@
                 <nav>
                   <div class="ltn__main-menu">
                     <ul>
-                      <li><a href="index.html">Home</a></li>
-                      <li><a href="about.html">Vision e Mission</a></li>
-                      <li><a href="contact.html">Conttataci</a></li>
+                      <li><a href="index">Home</a></li>
+                      <li><a href="about">Vision e Mission</a></li>
+                      <li><a href="contact">Conttataci</a></li>
                       <li class="special-link">
                         <a href="https://www.immobiliare.it/agenzie-immobiliari/378222/sgs-trieste/">Immobili</a>
                       </li>
@@ -102,15 +102,15 @@
       <div class="ltn__utilize-menu-inner ltn__scrollbar">
         <div class="ltn__utilize-menu-head">
           <div class="site-logo">
-            <a href="index.html"><img src="img/logo.png" alt="Logo" /></a>
+            <a href="index"><img src="img/logo.png" alt="Logo" /></a>
           </div>
           <button class="ltn__utilize-close">×</button>
         </div>
         <div class="ltn__utilize-menu">
           <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">Vision e Mission</a></li>
-            <li><a href="contact.html">Conttataci</a></li>
+            <li><a href="index">Home</a></li>
+            <li><a href="about">Vision e Mission</a></li>
+            <li><a href="contact">Conttataci</a></li>
           </ul>
         </div>
         <div class="ltn__utilize-buttons ltn__utilize-buttons-2">
@@ -240,7 +240,7 @@
                 <img src="img/icons/icon-img/21.png" alt="#" />
               </div>
               <div class="ltn__feature-info">
-                <h3><a href="contact.html">Affitta casa tua con noi</a></h3>
+                <h3><a href="contact">Affitta casa tua con noi</a></h3>
                 <p>
                   Il mercato degli affitti presenta una domanda altissima al
                   fronte di una disponibilità di immobili scarsa. Il motivo
@@ -254,7 +254,7 @@
                   tua proprietà, grazie anche ad uno scrupoloso esame delle
                   credenziali dei potenziali candidati.
                 </p>
-                <a class="ltn__service-btn" href="contact.html">Trova Casa <i class="flaticon-right-arrow"></i></a>
+                <a class="ltn__service-btn" href="contact">Trova Casa <i class="flaticon-right-arrow"></i></a>
               </div>
             </div>
           </div>
@@ -266,7 +266,7 @@
               </div>
               <div class="ltn__feature-info">
                 <h3>
-                  <a href="contact.html">Vendiamo il tuo immobile in tempi rapidi e al miglior
+                  <a href="contact">Vendiamo il tuo immobile in tempi rapidi e al miglior
                     prezzo</a>
                 </h3>
                 <p>
@@ -281,7 +281,7 @@
                   importi appaganti e spesso vengono immediatamente accettate
                   dai proprietari.
                 </p>
-                <a class="ltn__service-btn" href="contact.html">Trova acquirente <i
+                <a class="ltn__service-btn" href="contact">Trova acquirente <i
                     class="flaticon-right-arrow"></i></a>
               </div>
             </div>
@@ -295,7 +295,7 @@
 
               <div class="ltn__feature-info">
                 <h3>
-                  <a href="contact.html">Trova la casa dei tuoi sogni con noi</a>
+                  <a href="contact">Trova la casa dei tuoi sogni con noi</a>
                 </h3>
                 <p>
                   SGS Immobiliare ti aiuta a trovare la casa perfetta in modo
@@ -309,7 +309,7 @@
                   dalla ricerca alla conclusione dell'acquisto, offrendoti un
                   servizio completo e professionale.
                 </p>
-                <a class="ltn__service-btn" href="contact.html">Trova casa<i class="flaticon-right-arrow"></i></a>
+                <a class="ltn__service-btn" href="contact">Trova casa<i class="flaticon-right-arrow"></i></a>
               </div>
             </div>
           </div>
@@ -456,7 +456,7 @@
                         <i class="icon-privacy"></i>
                       </div>
                       <div class="footer-address-info">
-                        <p><a href="privacy.html">Privacy</a></p>
+                        <p><a href="privacy">Privacy</a></p>
                       </div>
                     </li>
                   </ul>
