--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="col">
               <div class="site-logo-wrap">
                 <div class="site-logo">
-                  <a href="index.html"><img src="img/logo.png" alt="Logo" />SGS Immobiliare</a>
+                  <a href="index"><img src="img/logo.png" alt="Logo" />SGS Immobiliare</a>
                 </div>
               </div>
             </div>
@@ -64,9 +64,9 @@
                 <nav>
                   <div class="ltn__main-menu">
                     <ul>
-                      <li><a href="index.html">Home</a></li>
-                      <li><a href="about.html">Vision e Mission</a></li>
-                      <li><a href="contact.html">Conttataci</a></li>
+                      <li><a href="index">Home</a></li>
+                      <li><a href="about">Vision e Mission</a></li>
+                      <li><a href="contact">Conttataci</a></li>
                       <li class="special-link">
                         <a href="https://www.immobiliare.it/agenzie-immobiliari/378222/sgs-trieste/">Immobili</a>
                       </li>
@@ -101,15 +101,15 @@
       <div class="ltn__utilize-menu-inner ltn__scrollbar">
         <div class="ltn__utilize-menu-head">
           <div class="site-logo">
-            <a href="index.html"><img src="img/logo.png" alt="Logo" /></a>
+            <a href="index"><img src="img/logo.png" alt="Logo" /></a>
           </div>
           <button class="ltn__utilize-close">×</button>
         </div>
         <div class="ltn__utilize-menu">
           <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">Vision e Mission</a></li>
-            <li><a href="contact.html">Conttataci</a></li>
+            <li><a href="index">Home</a></li>
+            <li><a href="about">Vision e Mission</a></li>
+            <li><a href="contact">Conttataci</a></li>
           </ul>
         </div>
         <div class="ltn__utilize-buttons ltn__utilize-buttons-2">
@@ -183,7 +183,7 @@
                           </p>
                         </div>
                         <div class="btn-wrapper animated">
-                          <a href="contact.html" class="theme-btn-1 btn btn-effect-1">Richiedi Informazioni</a>
+                          <a href="contact" class="theme-btn-1 btn btn-effect-1">Richiedi Informazioni</a>
 
                         </div>
                       </div>
@@ -263,7 +263,7 @@
                           </p>
                         </div>
                         <div class="btn-wrapper animated">
-                          <a href="contact.html" class="theme-btn-1 btn btn-effect-1">Richiedi Informazioni</a>
+                          <a href="contact" class="theme-btn-1 btn btn-effect-1">Richiedi Informazioni</a>
                           <!-- <a class="ltn__video-play-btn bg-white"
                           href="https://www.youtube.com/embed/HnbMYzdjuBs?autoplay=1&amp;showinfo=0"
                           data-rel="lightcase">
@@ -406,7 +406,7 @@
                 </div>
                 <div class="ltn__feature-info">
                   <h4>
-                    <a href="about.html">Affidabilità</a>
+                    <a href="about">Affidabilità</a>
                   </h4>
                   <p>
                     La nostra agenzia rappresenta una scelta sicura per la tua intermediazione immobiliare, siamo in
@@ -421,7 +421,7 @@
                 </div>
                 <div class="ltn__feature-info">
                   <h4>
-                    <a href="about.html"> Rapidità</a>
+                    <a href="about"> Rapidità</a>
                   </h4>
                   <p>
                     Per noi il tuo immobile è una priorità, seguiremo personalmente la tua pratica e avremo una linea
@@ -436,7 +436,7 @@
                 </div>
                 <div class="ltn__feature-info">
                   <h4>
-                    <a href="about.html">Equità</a>
+                    <a href="about">Equità</a>
                   </h4>
                   <p>
                     Ci rendiamo conto di lavorare in un mercato dove la singola operazione spesso rappresenta anni di
@@ -474,9 +474,9 @@
                 <img src="img/icons/icon-img/21.png" alt="#">
               </div>
               <div class="ltn__feature-info">
-                <h3><a href="contact.html">Compra una cosa</a></h3>
+                <h3><a href="contact">Compra una cosa</a></h3>
                 <p>Enimad minim veniam quis nostrud exercitation llamco laboris. Lorem ipsum dolor sit amet.</p>
-                <a class="ltn__service-btn" href="contact.html">Find A Home <i class="flaticon-right-arrow"></i></a>
+                <a class="ltn__service-btn" href="contact">Find A Home <i class="flaticon-right-arrow"></i></a>
               </div>
             </div>
           </div>
@@ -487,9 +487,9 @@
                 <img src="img/icons/icon-img/22.png" alt="#">
               </div>
               <div class="ltn__feature-info">
-                <h3><a href="contact.html">Affita la casa</a></h3>
+                <h3><a href="contact">Affita la casa</a></h3>
                 <p>Enimad minim veniam quis nostrud exercitation llamco laboris. Lorem ipsum dolor sit amet.</p>
-                <a class="ltn__service-btn" href="contact.html">Find A Home <i class="flaticon-right-arrow"></i></a>
+                <a class="ltn__service-btn" href="contact">Find A Home <i class="flaticon-right-arrow"></i></a>
               </div>
             </div>
           </div>
@@ -500,9 +500,9 @@
                 <img src="img/icons/icon-img/23.png" alt="#">
               </div>
               <div class="ltn__feature-info">
-                <h3><a href="contact.html">Vendi la casa</a></h3>
+                <h3><a href="contact">Vendi la casa</a></h3>
                 <p>Enimad minim veniam quis nostrud exercitation llamco laboris. Lorem ipsum dolor sit amet.</p>
-                <a class="ltn__service-btn" href="contact.html">Find A Home <i class="flaticon-right-arrow"></i></a>
+                <a class="ltn__service-btn" href="contact">Find A Home <i class="flaticon-right-arrow"></i></a>
               </div>
             </div>
           </div>
@@ -910,7 +910,7 @@
                         <i class="icon-privacy"></i>
                       </div>
                       <div class="footer-address-info">
-                        <p><a href="privacy.html">Privacy</a></p>
+                        <p><a href="privacy">Privacy</a></p>
                       </div>
                     </li>
                   </ul>
