--- a/privacy.html
+++ b/privacy.html
@@ -43,7 +43,7 @@
                         <div class="col">
                             <div class="site-logo-wrap">
                                 <div class="site-logo">
-                                    <a href="index.html"><img src="img/logo.png" alt="Logo" />SGS Immobiliare</a>
+                                    <a href="index"><img src="img/logo.png" alt="Logo" />SGS Immobiliare</a>
                                 </div>
                             </div>
                         </div>
@@ -52,9 +52,9 @@
                                 <nav>
                                     <div class="ltn__main-menu">
                                         <ul>
-                                            <li><a href="index.html">Home</a></li>
-                                            <li><a href="about.html">Vision e Mission</a></li>
-                                            <li><a href="contact.html">Contattaci</a></li>
+                                            <li><a href="index">Home</a></li>
+                                            <li><a href="about">Vision e Mission</a></li>
+                                            <li><a href="contact">Contattaci</a></li>
                                             <li class="special-link">
                                                 <a
                                                     href="https://www.immobiliare.it/agenzie-immobiliari/378222/sgs-trieste/">Immobili</a>
@@ -209,7 +209,7 @@
                                                 <i class="icon-privacy"></i>
                                             </div>
                                             <div class="footer-address-info">
-                                                <p><a href="privacy.html">Privacy</a></p>
+                                                <p><a href="privacy">Privacy</a></p>
                                             </div>
                                         </li>
                                     </ul>
