feat: updated images

--- a/about.html
+++ b/about.html
@@ -157,12 +157,7 @@
         <div class="row">
           <div class="col-lg-6 align-self-center">
             <div class="about-us-img-wrap about-img-left">
-              <img src="img/others/13.png" alt="About Us Image" />
-              <div class="about-us-img-info about-us-img-info-2 about-us-img-info-3">
-                <div class="ltn__video-img ltn__animation-pulse1">
-                  <img src="img/others/8.png" alt="video popup bg image" />
-                </div>
-              </div>
+              <img src="img/others/13.jpg" alt="About Us Image" />
             </div>
           </div>
           <div class="col-lg-6 align-self-center">
@@ -185,7 +180,7 @@
                   Vogliamo creare una vita quotidiana migliore per tutti
                   coloro che si affidano a noi, facendoci carico delle loro
                   preoccupazioni e fornendogli un luogo dove trascorrere le
-                  giornate in maniera serena./p>
+                  giornate in maniera serena.
                 </p>
               </div>
               <ul class="ltn__list-item-half clearfix">
@@ -332,7 +327,7 @@
           </div>
         </div>
         <div class="row justify-content-center">
-          <div class="col-lg-4 col-sm-6">
+          <div class="col-lg-6 col-sm-6">
             <div class="ltn__team-item ltn__team-item-3---">
               <div class="team-img">
                 <img src="img/team/4.jpg" alt="Image" />
@@ -350,7 +345,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-sm-6">
+          <div class="col-lg-6 col-sm-6">
             <div class="ltn__team-item ltn__team-item-3---">
               <div class="team-img">
                 <img src="img/team/2.jpg" alt="Image" />
@@ -361,16 +356,6 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-sm-6">
-            <div class="ltn__team-item ltn__team-item-3---">
-              <div class="team-img">
-                <img src="img/team/5.jpg" alt="Image" />
-              </div>
-              <div class="team-info">
-                <h4>Jovan</h4>
-                <h6 class="ltn__secondary-color">Agente</h6>
-              </div>
-            </div>
           </div>
         </div>
       </div>
