feat: udated text

--- a/about.html
+++ b/about.html
@@ -293,7 +293,7 @@
                   <a href="contact">Trova la casa dei tuoi sogni con noi</a>
                 </h3>
                 <p>
-                  SGS Immobiliare ti aiuta a trovare la casa perfetta in modo
+                  Ti aiutiamo a trovare la casa perfetta in modo
                   semplice ed efficace, offrendoti un'esperienza chiara e
                   trasparente. Grazie alla nostra profonda conoscenza del
                   mercato e a una vasta rete di immobili disponibili, siamo in
